--- a/Twin Players 9.11/Packages/manifest.json
+++ b/Twin Players 9.11/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.adaptiveperformance": "5.1.0",
+    "com.unity.burst": "1.8.15",
     "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
